# backend/src/routers/user.router.ts
@@ -1,5 +1,5 @@
 import { Router } from "express";
-import { login, me, register } from "../controllers/user.controller";
+import { getTotals, login, me, register } from "../controllers/user.controller";
 import authMiddleware from "../middlewares/auth.middleware";
 
 const userRouter = Router();
@@ -7,5 +7,6 @@ const userRouter = Router();
 userRouter.post("/login", login);
 userRouter.post("/register", register)
 userRouter.get("/me", authMiddleware, me);
+userRouter.get('/totals', authMiddleware, getTotals);
 
 export default userRouter;
